<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:text="@string/textView1"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/imageView_main"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView_main"
        android:layout_width="372dp"
        android:layout_height="545dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/imageView_main"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/open_hands" />

    <EditText
        android:id="@+id/editTextNumber1"
        style="@style/CustomEditText"
        android:autofillHints="value2"
        android:hint="@string/editTextNumber1"

        app:layout_constraintVertical_bias="0.481"
        app:layout_constraintHorizontal_bias="0.078"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/editTextNumber2"
        android:autofillHints="value2"
        android:hint="@string/editTextNumber2"

        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintVertical_bias="0.224"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/editTextNumber3"
        android:autofillHints="value2"
        android:hint="@string/editTextNumber3"

        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintVertical_bias="0.189"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/editTextNumber4"
        android:autofillHints="value2"
        android:hint="@string/editTextNumber4"

        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintVertical_bias="0.224"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        style="@style/CustomEditText"
        android:id="@+id/editTextNumber5"
        android:autofillHints="value2"
        android:hint="@string/editTextNumber5"

        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintVertical_bias="0.336"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>